# controle_financeiro

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Procfile  README.md  default.conf  docker-compose.yml  install_flask_app.sh  mkdocs.yml  pyproject.toml  settings.toml  settings.yaml
app/: app.py
app/blueprints/api/: __init__.py  despesas.py  receita.py  resumo.py
app/blueprints/middlewares/: superuser_middleware.py
app/blueprints/requets/: auth_request.py  despesas_request.py  receitas_request.py  users_request.py
app/blueprints/serializer/: despesas_schema.py  receitas_schema.py  users_schema.py
app/core/: create_superuser.py
app/enum/: categoria_enum.py  roles_enum.py
app/ext/: commands.py  configuration.py  flask_jwt_extended.py  flask_marshmallow.py  flask_migrate.py  flask_sqlalchemy.py
app/models/: __init__.py  despesas_model.py  receitas_model.py  users_model.py
app/serializer/: despesas_schema.py  receitas_schema.py
app/tests/auth/: test_login.py
app/tests/despesas/: test_delete_despesas.py  test_get_all_despesas.py  test_get_by_descricao_despesas.py  test_get_by_id_despesas.py  test_get_despesas_by_ano_and_mes.py  test_post_despesas.py  test_put_despesas.py
app/tests/receitas/: test_delete_receitas.py  test_get_all_receitas.py  test_get_by_descricao_receitas.py  test_post_receitas.py  (+3 more)
docs/: index.md
migrations/versions/: 231705ef50b6_.py  255f573a78f7_.py  27b407303e2e_.py  306c571d1144_.py  51c834695db1_.py  645f470add59_.py  91695e0193e1_.py  9a09cf5db78d_.py  aa6a6211aa37_.py  b2047f3f06d2_.py  c7ac23bf35eb_.py
(+21 files in other folders)
