[tool.poetry]
name = "controle_financeiro"
version = "1.0.0"
description = "Projeto proposto pelo Challenge Back-End na Alura"
authors = ["jacksonsr451 <jackson.severino.rocha@escola.pr.gov.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.3"
unittest = "^0.0"
dynaconf = "^3.1.9"
python-dotenv = "^0.20.0"
Flask-RESTful = "^0.3.9"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.28.1"
marshmallow-enum = "^1.5.1"
Flask-JWT-Extended = "^4.4.4"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
